--- a/babyno.top/文颜支持自定义主题.html
+++ b/babyno.top/文颜支持自定义主题.html
@@ -171,9 +171,9 @@
 }
 </code></pre>
 <p>添加在原始链接旁的脚注上标：</p>
-<p><img alt="alt text" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/10.webp"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/10.webp"/></p>
 <p>脚注行：</p>
-<p><img alt="alt text" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/11.webp"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-11-06-wenyan-supports-customized-themes/11.webp"/></p>
 <h3>行内代码</h3>
 <pre><code class="lang-css">#wenyan p code {
     font-family: var(--monospace-font);
