--- a/f2h2h1.github.io/_draft.html
+++ b/f2h2h1.github.io/_draft.html
@@ -922,6 +922,11 @@ vscode的使用技巧
             https://github.com/coder/code-server
             https://github.com/gitpod-io/openvscode-server
         直接访问 vscode.dev 也可以编辑本地文件
+    vscodium
+        没有微软 遥测/跟踪 代码的 vscode ，但也用不了 微软的vscode插件商店，安装插件似乎会更麻烦一点
+        https://vscodium.com/
+        https://github.com/VSCodium/vscodium
+        https://open-vsx.org/ 可用的插件商店
 爬虫与反爬虫的经验
     爬虫
         无视 robots.txt
@@ -2052,15 +2057,19 @@ KiB 和 KB 和 Kb 和 Kbps 的联系与区别
             运行完整的 Chromium
             但这个是商业库
         QtWebkit 和 QtWebEngine
-            也是用 Webkit
+            QtWebkit 用的是 Webkit
             Qt 5.4 QWebEngine 出现
             Qt 5.5 QtWebEngine 和 QtWebkit 共存
             Qt 5.6 QWebKit 废弃
-            KDE 里有两个浏览器也是用 QtWebkit
+            QtWebEngine 用的是 Chromium
+            KDE 里有两个浏览器也是用 QtWebEngine
                 Falkon 用于桌面的
                 Angelfish 用于移动设备的
+                新版的 Konqueror 也是用 QtWebEngine 了
+                看来不止 windows 即使是 linux 也没有几个浏览器用 webkit 了
         gtk 也有类似的项目 webkitgtk
             也是用 Webkit
+            GNOME Web
         CEF
             Chromium Embedded Framework
 程序 软件 应用 的联系与区别
@@ -4590,17 +4599,6 @@ termux
                 wsl --shutdown
             停止特定发行版
                 wsl --terminate &lt;distro name&gt;
-            通过 wsl 的 gui
-                https://learn.microsoft.com/zh-cn/windows/wsl/tutorials/gui-apps
-                单一窗口
-                    直接安装就可以运行了
-                        sudo apt install x11-apps -y
-                        安装完后就可以直接运行了 xeyes
-                    如果安装失败就更新一下 apt ， sudo apt-get update
-                    https://learn.microsoft.com/zh-cn/windows/wsl/tutorials/gui-apps
-                有完整的桌面环境
-                默认是使用 Wayland ，可以通过配置文件禁用 Wayland ，然后再自己装 x11 环境
-                    https://ivonblog.com/posts/wsl-x-server/
             wsl2 支持嵌套虚拟
             导出第一个实例
                 wsl --export &lt;发行版名称&gt; &lt;导出文件路径&gt;
@@ -4612,6 +4610,16 @@ termux
                 启动新导入的实例 wsl -d debian-email
             安装完 wsl2 后就可以安装 Docker Desktop 了
             网络
+                WSL 每次启动的时候都会有不同的 IP 地址
+                获取宿主机ip 这个ip是可以用于和虚拟机通讯的
+                    cat /etc/resolv.conf | grep nameserver | awk '{ print $2 }'
+                获取虚拟机ip 这个ip是可以用于和宿主机通讯的
+                    hostname -I | awk '{print $1}'
+                windows主机ip
+                    ip route show | grep -i default | awk '{ print $3}'
+                    在宿主机里运行 ipconfig ，网卡名字里带有 wsl 的ip也可以
+                如果无法和宿主通讯，可能是被 Windows 的防火墙给拦截了
+                如果需要从外部访问wsl2的网络服务还需要更复杂的设置
                 https://learn.microsoft.com/zh-cn/windows/wsl/networking
             gui
                 单一窗口
@@ -4620,10 +4628,64 @@ termux
                         安装完后就可以直接运行了 xeyes
                     如果安装失败就更新一下 apt ， sudo apt-get update
                     https://learn.microsoft.com/zh-cn/windows/wsl/tutorials/gui-apps
+                安装 snap
+                    apt install snap
+                    在 /etc/wsl.conf 里加入以下内容（如果不存在就新建一个）
+                        vi /etc/wsl.conf
+                        [boot]
+                        systemd=true
+                    退出 wsl
+                    重启
+                        wsl --shoutdown
+                        wsl -d 发行版名称
+                    snap install snap
+                    snap install 需要安装的软件名
+                    例如
+                        snap install firefox
+                        安装完后直接在命令行里运行 firefox 就可以了
+                    还有字体的问题没有解决
+                安装 flatpak
+                        apt install flatpak
+                    安装flatpakref后缀文件
+                        flatpak install --from /path/to/flatpakref
+                    查找已安装的包
+                        flatpak list
+                    启动应用
+                        flatpak run &lt;app id&gt;
                 有完整的桌面环境
                 默认是使用 Wayland ，可以通过配置文件禁用 Wayland ，然后再自己装 x11 环境
                     https://ivonblog.com/posts/wsl-x-server/
                 理论上还可以通过 Waydroid 来运行安卓应用
+            取消 Windows 的路径
+                WSL2 默认会将 Windows 的 $PATH 附加到 WSL 的 $PATH 中，这样就可以了在 WSL 中直接用 Windows 的命令和程序了，
+                但 shell 中使用命令自动补全时产生了大量的无关程序。
+                在 /etc/wsl.conf 中可以进行设置（如果没有这个文件就自己新建一个），里面加上
+                [interop]
+                appendWindowsPath = false
+            跨文件系统
+                在宿主机访问wsl
+                    cmd 和 powershell
+                        dir \\wsl$\debian-email
+                    git for windows
+                        ls "\\\\wsl$\\debian-email"
+                        cygpath -u "\\\\wsl$\\debian-email"
+                        ls //wsl$/debian-email
+                    wsl$ 可以用 wsl.localhost 替代
+                    debian-email 是镜像名
+                在wsl访问宿主机
+                    ls /mnt/c
+            通过资源管理器直接访问 wsl 里的目录
+                直接在地址栏里输入
+                    \\wsl.localhost\镜像名
+                    \\wsl$\镜像名
+                例子
+                    \\wsl.localhost\debian-email
+                    \\wsl$\debian-email
+                在 此电脑 右键 添加一个网络位置，输入这个路径，就可以像访问普通盘符一样访问wsl里的目录
+            git
+                虽然 git 安装在 wsl 可以同时操作 宿主机和wsl的文件
+                但我个人还是比较倾向于宿主机和wsl各自安装一个git
+                https://learn.microsoft.com/zh-cn/windows/wsl/tutorials/wsl-git
             新版的 wsl 支持 直连显卡，这个对 机器学习而言似乎很重要，但我不会这个
     Docker Desktop
         windows 版的 Docker Desktop 通常用 wsl2 或 Hyper-V 作为后端
@@ -4717,7 +4779,9 @@ linux 应用的一般启动套路
             默认的 &lt; 环境变量 &lt; 配置文件 &lt; 命令行参数 &lt; 运行时修改
     配置文件虽然一些有约定俗成的规定，但通常依然会散落到各个位置
     通过包管理安装的软件和编译安装的软件往往会有一些差异
-    （现在我似乎有一点理解为什么 Gentoo 会坚持编译安装软件了）
+        （现在我似乎有一点理解为什么 Gentoo 会坚持编译安装软件了）
+    程序配置的时机
+        编译时，安装时，启动时，运行时
 垃圾回收
     什么是垃圾
     为什么要进行垃圾回收
@@ -5332,7 +5396,7 @@ nas
         单独建一个网站或app
             直出视频文件
             使用hls
-    除了视频之外还可以继续有 音频 图片 文档 等等
+    除了视频之外还可以继续有 音频 图片 文档 漫画 小说 游戏等等
     更多？
         连接其它设备？物联网？智能家电？软路由？htpc？电视机顶盒？游戏主机？HomeLab？all in one？算存网分离？
             忽略 猫 和 路由 ？
@@ -5576,7 +5640,7 @@ nas
         Flomo
     gtd (Getting Things Done)
     pkm (Personal Knowledge Management, 个人知识管理)
-    PIM (Personal Information Management)
+    PIM (Personal Information Management, 个人信息管理)
     思维导图(mind map)
         DesktopNaotu
         jsMind
@@ -5597,6 +5661,7 @@ nas
         日历(calendar)
         任务管理(todo)
         看板(Kanban)
+        知识库（Knowledge base）
         项目管理(Project Management System, PMS)
             Microsoft Project
             Redmine
@@ -5604,6 +5669,10 @@ nas
             产品生命周期管理（Product Life Cycle Management，PLM）
             产品数据管理（Product Data Management，PDM）
             https://zh.wikipedia.org/wiki/%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86%E8%BD%AF%E4%BB%B6%E6%AF%94%E8%BE%83
+            类似的软件还有非常多
+            番茄工作法
+            四象限分类和时间盒子
+            艾宾浩斯遗忘曲线
     总结一下需求
         收集 知识和信息
         整理 知识和信息
@@ -5613,6 +5682,19 @@ nas
 游戏机的模拟器
     平台
         街机 家机 掌机 pc
+    类型
+        ACT
+        FTG
+        SLG
+        MUG
+    模拟飞行
+        DCS
+        X-Plane
+        MFS
+        FSX/P3D
+    策略或模拟经营类的游戏
+        文明 全面战争 P社四萌 城市天际线
+    小时候玩过的游戏
 媒体相关的经验
     multimedia
     multi-media
@@ -5649,11 +5731,67 @@ nas
                 例如 出版社 电台 电视台 自媒体
     媒质 又是 什么？
 从ed到perl还有正则表达式
-    qed ed ex vi vim sed sam awk grep perl
+    qed ed ex vi vim grep sed awk perl
+    qed
+        quick editor
+    ed
+        editor
+    ex
+        extended editor
+    vi
+        visual
+        源于ex的命令visual
+    vim
+        最初的简称是Vi IMitation（仿造的vi），随着功能的不断增加，正式名称改成了Vi IMproved（改良的vi）
+        vim 有五个版本
+            T   tiny
+            S   small
+            N   normal
+            B   big
+            H   huge
+            多数情况下预装的是 small
+            通过包管理器装的是 huge
+            多数情况下 vi 也只是 vim 的别名
+            gvim 也是 huge
+            gvim 也叫做 vim-gnome
+        windows 下的vim就是gvim
+            https://github.com/vim/vim-win32-installer
+            https://github.com/vim/vim-win32-installer/releases
+        vim 编译时可以通过这个参数来指定版本
+            --with-features=huge
+        vim 编译时可以通过这个参数来生成 gvim
+            例如
+                --enable-gui=gnome
+        ./configure --help
+            命令来查看所有可用的编译参数
+        vim --version
+            查看 vim 的版本，配置文件路径，可用的功能
+    grep
+        grep这个应用程序最早由肯·汤普逊写成。grep原先是ed下的一个应用程序，
+        名称来自于g/re/p（globally search a regular expression and print，以正则表达式进行全局查找以及打印）。
+        在ed下，输入g/re/p这个命令后，会将所有符合先定义样式的字符串，以行为单位打印出来。
+    sed
+        stream editor
+    awk
+        其名称得自于它的三位创始人的姓氏首字母
+        Alfred Aho, Peter Weinberger, Brian Kernighan
+    perl
+        Practical Extraction and Report Language
+        实用 提取 和 报告 语言
+    emacs
+        Editor Macros
+        宏编辑器
     editor 编辑器
     text editor 文本编辑器
     word processor (WP) 文字处理器
-        word
+        AbiWord
+        Calligra Words
+        OpenOffice Writer
+        LibreOffice Writer
+        Kingsoft Writer
+        Microsoft Word
+        WordPad
+            Microsoft 在 Windows 11 24H2 中删除了写字板，并且没有继任者
     desktop publishing (DTP)
         Microsoft Publisher
         Adobe InDesign
@@ -6316,6 +6454,10 @@ Hello what what is the first thing, and I am am scq000.
         telegraph 电报
         telephone 电话
         telefax 传真
+        Science n. 科学
+        Technology n. 技术
+        Engineering n. 工程
+        Science and Technology n. 科技 科学和技术
     三论
         旧三论
             系统论、控制论、信息论
@@ -6379,6 +6521,7 @@ Hello what what is the first thing, and I am am scq000.
 信息技术的本质是什么？
     现实 -&gt; 数字？
 财政、经济、金融
+国家和社会的区别和联系
 政治
 历史
     过去发生的事
@@ -6436,12 +6579,67 @@ java
             JFace
         JavaFX
     web
+        大致包括两部分
+            客户端
+                applet 和 java web start
+                这两个都是过时的技术了
+            服务端
+                servlet 和 jsp
+                jsp 也过时了
+                servlet 虽然还活跃，但很少会直接写 servlet 了
         Applet（Application）
             Applet 是一个新造的单词，大意是小的应用程序
         servlet（Server Applet）
+            四个作用域
+                application
+                session
+                request
+                page
         jsp（Java Server Page）
+            jsp 就是 servlet ，jsp 最终都会被编译成 servlet 再执行
+            JSP的视图代码可以是任何文本内容
+                包括但不限于 html xml json txt
+            jsp 文件里有两种内容
+                模板数据/模板元素 -&gt; 就是指 html 代码，就是指 静态内容
+                jsp 元素 -&gt; jsp 的标签 脚本 动作 指令。。。
+            scriptlet
+                &lt;%  %&gt;
+                &lt;jsp:scriptlet&gt; &lt;/jsp:scriptlet&gt;
+            JSP声明
+                &lt;%!  %&gt;
+                &lt;jsp:declaration&gt; &lt;/jsp:declaration&gt;
+            JSP表达式
+                一个JSP表达式中包含的脚本语言表达式，先被转化成String，然后插入到表达式出现的地方
+                表达式元素中可以包含任何符合Java语言规范的表达式，但是不能使用分号来结束表达式
+                &lt;%= 表达式 %&gt;
+                &lt;jsp:expression&gt;表达式&lt;/jsp:expression&gt;
+            JSP注释(Comment)
+                &lt;%-- %&gt;
+                &lt;% // %&gt;
+                &lt;% /* */ %&gt;
             EL（Expression Language，表达式语言）
-            JSTL(JSP Standard Tag Library，JSP标准标签库)
+                ${}
+                隐藏对象
+                el函数
+                el自定义函数
+            JSP Directives (jsp 指令)
+                &lt;%@ %&gt;
+                &lt;jsp:directive.page attribute="value" /&gt;
+                page 声明页面属性
+                include 包含其它jsp页面
+                taglib 导入标签库
+                    JSTL(JSP Standard Tag Library，JSP标准标签库)
+                    第三方标签库
+                    自定义标签库
+                    不过 jstl 和 el 通常要单独引入对应的 jar
+            JSP Actions
+                jsp:include     在页面被请求的时候引入一个文件。
+                jsp:forward     把请求转到一个新的页面。
+                jsp:param   设置请求参数
+                jsp:useBean     寻找或者实例化一个JavaBean。
+                jsp:setProperty     设置JavaBean的属性。
+                jsp:getProperty     输出某个JavaBean的属性。
+            九个内置对象
         tomcat
             普通的tomcat
             嵌入式的tomcat
@@ -6570,6 +6768,8 @@ tar --xz -cf UrsaMinor-`date +%g%m%d%H%M`.tar.xz UrsaMinor
     update fraction 日期
     update fraction 20211223
     pwd; sleep 8000; git commit -m "update fraction "$(date +%Y%m%d); git push;
+    date +%g%m%d%H%M
+    date +%Y%m%d%H%M
 修改 错别字 标点 格式
     update format
 更新 sitemap 之类的文件
