--- a/f2h2h1.github.io/电子邮件的不完整总结.html
+++ b/f2h2h1.github.io/电子邮件的不完整总结.html
@@ -205,7 +205,25 @@
   Date: Mon, 4 April 2022
   From: Alice &lt;alice@example.com&gt;
   Subject: Eggs benedict casserole
-  To: Bob &lt;bob@example.com&gt;
+  To: bob1 &lt;bob1@example.com&gt;, bob2 &lt;bob2@example.com&gt;
+
+  Hi Bob,
+  I will bring the eggs benedict casserole recipe on Friday.
+  -Alice
+  .
+  QUIT
+</code></pre>
+<pre><code>  HELO example.com
+  AUTH LOGIN
+  MAIL FROM:&lt;alice@example.com&gt;
+  RCPT TO:&lt;bob1@example.com&gt;
+  RCPT TO:&lt;bob2@example.com&gt;
+  DATA
+  Date: Mon, 4 April 2022
+  From: Alice &lt;alice@example.com&gt;
+  Subject: Eggs benedict casserole
+  To: bob1 &lt;bob1@example.com&gt;
+  Cc: bob2 &lt;bob2@example.com&gt;
 
   Hi Bob,
   I will bring the eggs benedict casserole recipe on Friday.
@@ -564,7 +582,7 @@ $mailMessage.Body = "&lt;p&gt;中文mailMessage&lt;/p&gt;"</p>
   // 设置邮件正文
   $message = '&lt;p&gt;message&lt;/p&gt;';
   // 设置邮件头部信息，包括发件人地址和回复地址
-  $additional_headers = [
+  $headers = [
       'From' =&gt; 'Mailer &lt;1643253513@qq.com&gt;',
       'Content-Type' =&gt; 'text/html; charset=utf-8',
       'Reply-To' =&gt; 'bing@example.com',
@@ -670,5 +688,12 @@ $mailMessage.Body = "&lt;p&gt;中文mailMessage&lt;/p&gt;"</p>
 </li>
 <li><a href="https://github.com/zetacomponents/Mail">https://github.com/zetacomponents/Mail</a></li>
 </ul>
+&lt;!--
+## python 发送邮件
+https://docs.python.org/zh-cn/3.13/library/smtplib.html
+https://docs.python.org/zh-cn/3.13/library/email.html
+https://docs.python.org/zh-cn/3.13/library/email.examples.html
+--&gt;
+
 <h2>如何在邮件里显示图片</h2>
 <h2>名词</h2>
