--- a/informal.top/Outline of LLM acceleration.html
+++ b/informal.top/Outline of LLM acceleration.html
@@ -7,12 +7,17 @@
 <li>block: compute matrix with block</li>
 <li>trick: update model structure or change training process</li>
 </ul>
-<p>already read papers: 12</p>
+<p>already read papers: 13</p>
 <h3>Reference</h3>
 <ul>
 <li><a href="https://github.com/facebookresearch/xformers">xformers</a>: collection of optimized transformers</li>
-<li><a href="https://ben.bolte.cc/fast-attention">fast attention collection</a></li>
 <li><a href="https://unsloth.ai/blog/mistral-benchmark">unsloth</a></li>
+<li><a href="https://github.com/triton-lang/triton">triton</a></li>
+<li><a href="https://github.com/linkedin/Liger-Kernel">Liger-Kernel</a></li>
+<li><a href="https://github.com/Dao-AILab/flash-attention">Flash-attention</a></li>
+<li><a href="https://github.com/NVIDIA/Megatron-LM">Megatron-LM from NVIDIA</a></li>
+<li><a href="https://github.com/huggingface/accelerate">huggingface accelerate</a></li>
+<li><a href="https://github.com/hpcaitech/ColossalAI">ColossalAI</a></li>
 <li><a href="https://github.com/galeselee/Awesome_LLM_System-PaperList">awesome LLM system</a></li>
 </ul>
 <h2>Categories</h2>
@@ -51,7 +56,7 @@
 <li><a href="https://informal.top/posts/notes-of-FlashAttention/">note</a></li>
 <li>May 2020</li>
 <li>70%</li>
-<li><a href="https://github.com/Dao-AILab/flash-attention">cod</a>: updating</li>
+<li><a href="https://github.com/Dao-AILab/flash-attention">code</a>: updating</li>
 </ul>
 <h4><a href="https://arxiv.org/abs/2112.05682">Self-attention Does Not Need O(n2) Memory</a></h4>
 <p>attention calculation with blocks</p>
@@ -59,7 +64,7 @@
 <li>Dec 2021</li>
 <li>70%</li>
 </ul>
-<h4>+ <a href="https://arxiv.org/abs/2311.01282">FlashDecoding++</a></h4>
+<h4><a href="https://arxiv.org/abs/2311.01282">FlashDecoding++</a></h4>
 <p>FlashDecoding++: Faster Large Language Model Inference on GPUs, three parts</p>
 <ul>
 <li><p>Softmax with block and Unified Maximum Value, result of block softmax can be directly used and merging is unnecesary. Optimized from FlashAttention.</p>
@@ -79,6 +84,16 @@
 </li>
 <li>No code(2024.11)</li>
 </ul>
+<h4><a href="https://arxiv.org/abs/2411.09009">Cut cross entropy</a></h4>
+<p>Main idea:</p>
+<ul>
+<li>Avoid to store final large matrix throught block computation, which can save lots of memory when vocabulary is large. </li>
+<li><p>Softmax matrix is sparse, when all values are smaller than precision of data type, computation are unnecessary.</p>
+<p><img alt="Idea" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/informal.top/images/2025/0115-01.png"/>{: width="600"}</p>
+</li>
+</ul>
+<pre><code>![Performance](/images/2025/0115-01.png){: width="600"}
+</code></pre>
 <h3>Basic</h3>
 <ul>
 <li><a href="https://informal.top/posts/validated-example/">Fast Cross Entropy Loss</a></li>
@@ -87,12 +102,13 @@
 <li><a href="https://unsloth.ai/blog/mistral-benchmark">Bitsandbytes bfloat16</a></li>
 </ul>
 <h3>Parallelization</h3>
-<p><strong>New Solutions on LLM Acceleration, Optimization, and Application</strong></p>
-<p>1) Medusa: output top-k predictions for next multiple positions parallelly through adding LM heads for next several positons, which can reduce inference latency.</p>
+<p>1) <strong>Medusa</strong></p>
+<p>output top-k predictions for next multiple positions parallelly through adding LM heads for next several positons, which can reduce inference latency.</p>
 <p><img alt="scalability" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/informal.top/images/2024/1112-01.png"/>{: width="600"}</p>
-<p>2) SnapKV: compress KV cacha for long sequence tasks</p>
+<p>2) <strong>SnapKV</strong></p>
+<p>compress KV cacha for long sequence tasks</p>
 <h3>Infrastructure</h3>
-<p><strong><a href="https://github.com/triton-lang/triton">triton</a></strong></p>
+<p>1) <strong><a href="https://github.com/triton-lang/triton">triton</a></strong></p>
 <ul>
 <li>An alternative language for cuda, designed for deep neural network</li>
 <li>published in 2019, purchase by OpenAI</li>
@@ -105,26 +121,26 @@
 </ul>
 </li>
 </ul>
-<p><strong>Hardware Acceleration of LLMs: A comprehensive survey and comparison</strong>
-Simple introduce and compare different hardware acceleration method in terms of efficiency and performance</p>
+<p>2) <strong>Hardware Acceleration of LLMs</strong>: A comprehensive survey and comparison</p>
+<p>Simple introduce and compare different hardware acceleration method in terms of efficiency and performance</p>
 <ul>
 <li>collect all method from 2020-2024</li>
 <li>comparison with the same process technology</li>
 <li>different choose for both efficiency and performance</li>
 </ul>
 <h3>Trick</h3>
+<p>1) Inference with Reference</p>
+<p>Lossless Acceleration of Large Language Models: copy reference to inference because there many same text sentence between them to accelerate inference
+2) SwitchHead</p>
+<p>Accelerating Transformers with Mixture-of-Experts Attention: select different experts matrices for every head in attention by input content to reduce computation and memory usage.</p>
+<pre><code>+ published: 2024
+</code></pre>
+<p>3) <a href="https://arxiv.org/abs/2402.17812">DropBP</a>:</p>
+<p>Accelerating Fine-Tuning of Large Language Models by Dropping Backward Propagation:</p>
 <ul>
-<li>Inference with Reference: Lossless Acceleration of Large Language Models: copy reference to inference because there many same text sentence betwee them to accelerate inference</li>
-<li>SwitchHead: Accelerating Transformers with Mixture-of-Experts Attention: select different experts matrices for every head in attention by input content to reduce computation and memory usage.<ul>
-<li>published: 2024</li>
-</ul>
-</li>
-<li><a href="https://arxiv.org/abs/2402.17812">DropBP: Accelerating Fine-Tuning of Large Language Models by Dropping Backward Propagation</a>:<ul>
 <li>Drop Backward propagation based on sensitivity which is the difference between Backward update and not update. great idea!</li>
 <li>change model constructure to have a 2^n submodels when drop some submodels</li>
 <li>published: 2024</li>
-</ul>
-</li>
 </ul>
 <p><img alt="scalability" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/informal.top/images/2024/1123-01.png"/>{: width="800"}</p>
 <h2>To Read</h2>
