--- a/kexizeroing.github.io/Container queries and :has selector.html
+++ b/kexizeroing.github.io/Container queries and :has selector.html
@@ -92,6 +92,21 @@ adjustLayout();
 </code></pre>
 <blockquote><p>Style queries are still experimental. A good reminder that mentioning "container queries" isn't enough now, we need to specify either size or style. Read more at: <a href="https://ishadeed.com/article/css-container-style-queries">https://ishadeed.com/article/css-container-style-queries</a></p>
 </blockquote>
+<h3>Scroll state queries</h3>
+<p>Chrome 133 introduces scroll state container queries. Before scroll state queries, you’d need to use JavaScript to understand if an element was stuck, snapped, or scrollable. Now there's a more performant method to trigger style changes when an element is stuck to an edge, is snapped on an axis, or is overflowing.</p>
+<pre><code class="lang-css">.stuck-top {
+  container-type: scroll-state;
+  position: sticky;
+  top: 0px;
+
+  &gt; nav {
+    @container scroll-state(stuck: top) {
+      background: Highlight;
+      color: HighlightText;
+    }
+  }
+}
+</code></pre>
 <h2>The <code>:has()</code> selector</h2>
 <p>The CSS <code>:has()</code> pseudo-class enables developers to check if a parent element contains children with specific parameters. For example, <code>p:has(span)</code> indicates a paragraph selector, which has a <code>span</code> inside of it. You can use this to style the parent paragraph itself, or style anything within it.</p>
 <p>Let’s expand on the example with the rocket card. What if you had a card without an image? Maybe you want to increase the size of the title and adjust the grid layout to single column so that it looks more intentional without the image.</p>
