--- a/kexizeroing.github.io/Get started with LangChain.html
+++ b/kexizeroing.github.io/Get started with LangChain.html
@@ -370,7 +370,12 @@ while (true) {
   }
 }
 </code></pre>
-<blockquote><p>Autonomous agents are self-governing AI systems. AutoGPT is an open-source "AI agent" that, given a goal in natural language, will attempt to achieve it by breaking it into sub-tasks and using the Internet and other tools in an automatic loop. <a href="https://www.georgesung.com/ai/autogpt-arch/">https://www.georgesung.com/ai/autogpt-arch/</a> is a quick summary about how AutoGPT works.</p>
+<blockquote><p>Agents are systems where LLMs dynamically direct their own processes and tool usage, maintaining control over how they accomplish tasks.</p>
+<p>Workflows use "predefined code paths", whereas agents "dynamically direct their own processes". The difference between them is the degree of autonomy. Agents have more autonomy, workflows run on pre-defined rails.</p>
+<ul>
+<li><a href="https://www.aihero.dev/building-effective-agents">https://www.aihero.dev/building-effective-agents</a></li>
+<li><a href="https://www.georgesung.com/ai/autogpt-arch">https://www.georgesung.com/ai/autogpt-arch</a></li>
+</ul>
 </blockquote>
 <h3>Run open-source LLMs locally on your computer</h3>
 <ol>
@@ -394,7 +399,7 @@ while (true) {
 </ul>
 </li>
 </ol>
-<p>You can run any GGUF <em>(a binary format that is optimized for quick loading and saving of models)</em> on the Hugging Face Hub directly with ollama. All you need to do is:</p>
+<p>You can run any GGUF (GPT-Generated Unified Format), a binary format that is optimized for quick loading and saving of models, on the Hugging Face Hub directly with ollama. All you need to do is:</p>
 <pre><code class="lang-sh"># https://huggingface.co/docs/hub/en/ollama
 ollama run hf.co/{username}/{repository}
 
