--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -35,6 +35,7 @@ npx nuxi@latest init my-app
 <li>recharts: chart library to help you to write charts in React.</li>
 <li>stripe: access to the Stripe API from applications, and use <a href="https://stripe.com/docs/webhooks">webhook</a> to get real-time updates.</li>
 <li>@mux/mux-node is a Mux API wrapper for Node projects to post a video. Note that this package uses Mux access tokens and secret keys and is intended to be used in server-side code only. Also add @mux/mux-player-react to integrate <a href="https://docs.mux.com">Mux</a> player into your web application.</li>
+<li><a href="https://next-video.dev">next-video</a> is a react component for adding video to your next.js application. It extends both the <code>&lt;video&gt;</code> element and your Next app with features for automatic video optimization.</li>
 <li>react-confetti: create a confetti effect to celebrate the accomplishment of particular steps in an application.</li>
 <li><a href="https://github.com/vercel/next.js/tree/canary/examples/auth">next-auth</a> is a complete open-source authentication solution for Next.js applications. <a href="https://github.com/codegenixdev/auth-nextjs-tutorial">auth-nextjs-tutorial</a> is an example project covering both OAuth providers and traditional credential-based authentication.</li>
 </ul>
@@ -43,6 +44,7 @@ npx nuxi@latest init my-app
 <h3>Remix - full stack web framework</h3>
 <ul>
 <li>Remix Tutorial: <a href="https://remix.run/start/tutorial">https://remix.run/start/tutorial</a></li>
+<li>React Router Tutorial: <a href="https://reactrouter.com/tutorials/address-book">https://reactrouter.com/tutorials/address-book</a></li>
 <li>Remix Templates: <a href="https://remix.run/docs/en/main/guides/templates">https://remix.run/docs/en/main/guides/templates</a></li>
 <li>Remix for Next.js Developers: <a href="https://remixfornextdevs.com">https://remixfornextdevs.com</a></li>
 </ul>
@@ -82,23 +84,32 @@ export const loader = async ({ params }: LoaderArgs) =&gt; {
 </ol>
 <h3>Writing CSS in 2024</h3>
 <p><strong>CSS-in-JS libraries</strong> (e.g. styled-components, Emotion for React) allows you to style your components by writing CSS directly in your JavaScript code. The good part includes making styles locally-scoped by default, colocating styles with components, enabling you to reference JavaScript variables in your style rules. But CSS-in-JS adds runtime overhead, the library must "serialize" your styles into plain CSS string that can be inserted into the document. Every time the component renders, the object styles are serialized again. Btw, using CSS-in-JS with newer React features like Server Components and Streaming requires library authors to support the latest version of React.</p>
-<p>For example, <a href="https://github.com/emotion-js/emotion">Emotion</a> is a flexible CSS-in-JS library. It allows you to style apps quickly with string or object styles. It also computes a hash of the plain CSS during serialization — this hash is what you see in the generated class names.</p>
-<pre><code class="lang-jsx">&lt;div
-  css={{
-    padding: 32px;
-    background-color: hotpink;
-    font-size: 24px;
-    border-radius: 4px;
-    &amp;:hover {
-      color: ${color};
-    }
-  }}
-&gt;
-  Hover to change color
-&lt;/div&gt;
+<pre><code class="lang-js">// const btnStyles = css`
+//   width: 100px;
+//   height: 100px;
+//   color: ${red};
+// `;
+// 
+// strings: ["width: 100px; height: 100px; color: ", ";"]
+// interpolations: ["red"]
+const interleave = (strings, interpolations) =&gt; {
+  return strings.reduce((output, str, i) =&gt; 
+    output + str + (interpolations[i] ?? ''), '');
+};
 
-// genergate below code
-&lt;div class="css-1h3ivcl"&gt;Hover to change color&lt;/div&gt;
+const styleElement = document.createElement('style');
+document.head.appendChild(styleElement);
+const sheet = styleElement.sheet;
+
+export const css = (strings, ...interpolations) =&gt; {
+  const styleString = interleave(strings, interpolations).trim();
+  // We use 36 as the radix here so that the output string uses the 26 alphabet characters as well.
+  // e.g. css-0, css-a
+  const className = `css-${sheet.cssRules.length.toString(36)}`;
+
+  sheet.insertRule(`.${className} { ${styleString} }`, sheet.cssRules.length);
+  return className;
+};
 </code></pre>
 <p><strong>CSS Modules</strong> are a small but impactful enhancement on top of vanilla CSS. A CSS Module is a CSS file where all class names and animation names are scoped locally by default. They treat the classes defined in each file as unique. Each class name or identifier is renamed to include a unique hash, and a mapping is exported to JavaScript to allow referencing them. CSS Modules are available in almost every <a href="https://github.com/css-modules/css-modules/blob/master/docs/get-started.md">modern bundler and framework</a>.</p>
 <p><strong>Tailwind</strong> uses a compiler to generate only the classes used. So while the utility CSS framework contains many possible class names, only the classes used will be included in the single, compiled CSS file. Tailwind classes are just utilities for normal CSS that adhere to a design system. You can mix and match Tailwind with CSS Modules.</p>
@@ -239,9 +250,6 @@ module.exports = {
 <h3>Debugging Node.js with <code>--inspect-brk</code></h3>
 <p><a href="https://www.builder.io/blog/debug-nodejs">https://www.builder.io/blog/debug-nodejs</a></p>
 <p>Launch your Node.js process using the <code>--inspect-brk</code> flag (<code>node server.js --inspect-brk</code>). Now, open up any Edge or Chrome dev tools window and click the little green Node.js logo button. A new instance of DevTools will open and connect to the node process.</p>
-<blockquote><p>Node.js 20.6.0 now supports reading <code>.env</code> files with the <code>--env-file</code> flag. You'll no longer need the <code>dotenv</code> package <em>(<a href="https://github.com/dotenvx/dotenvx">dotenvx</a> is a better dotenv from the creator of dotenv.)</em> Also supports passing runtime flags like <code>--inspect</code> and <code>--watch</code>. Example from @wesbos:<br/>
-&lt;img alt="node-env" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/F5WdyiKXEAAY7So.jpeg" width="600" /&gt;</p>
-</blockquote>
 <h2>Introducing the Backend For Frontend</h2>
 <p>We had server-side functionality which we wanted to expose both via our desktop web UI, and via one or more mobile UIs. We often faced a problem in accommodating these new types of user interface, often as we already had a tight coupling between the desktop web UI and our backed services. However the nature of a mobile experience differs from a desktop web experience. In practice, our mobile devices will want to make different calls, fewer calls, and will want to display different (and probably less) data than their desktop counterparts. This means that we need to add additional functionality to our API backend to support our mobile interfaces.</p>
 <p>One solution to this problem is that rather than have a general-purpose API backend, instead you have one backend per user experience - or call it a Backend For Frontend (BFF). The BFF is tightly coupled to a specific UI, and will typically be maintained by the same team as the user interface, thereby making it easier to define and adapt the API as the UI requires.</p>
@@ -272,7 +280,21 @@ module.exports = {
 <li>The video <a href="https://www.youtube.com/watch?v=lY-RQjWeweo">So You Think You Can Build A Dropdown?</a> is diving deep into the complexities of designing and building a fully-accessible dropdown menu.</li>
 <li><a href="https://github.com/emilkowalski/vaul">Vaul</a> is an unstyled drawer component for React that can be used as a Dialog replacement on tablet and mobile devices.</li>
 </ol>
-<p>Then it leaves us with the decision about how to style things. This is where <a href="https://ui.shadcn.com">shadcn/ui</a> comes into the picture. It's not a component library, but more of a code registry where you can copy/paste/modify the code to your content. It's built with Tailwind and Radix. <code>shadcn/ui</code> is a collection of reusable components that can be copied and pasted into your apps. Every component can be installed separately. It also provides a CLI that can be used to easily import components into your project, as simple as <code>npx shadcn-ui add card</code>, making it even more convenient to use. Here is a component demo page: <a href="https://kexizeroing.github.io/shadcn-ui">https://kexizeroing.github.io/shadcn-ui</a></p>
+<p>Then it leaves us with the decision about how to style things. This is where <a href="https://ui.shadcn.com">shadcn/ui</a> comes into the picture. It's not a component library, but more of a code registry where you can copy/paste/modify the code to your content. It's built with Tailwind and Radix. <code>shadcn/ui</code> is a collection of reusable components that can be copied and pasted into your apps. Every component can be installed separately. It also provides a CLI that can be used to easily import components into your project, as simple as <code>npx shadcn@latest add card</code>, making it even more convenient to use.</p>
+<pre><code class="lang-sh"># start at an empty directory (it will help you to create a Next.js project)
+npx shadcn@latest init sidebar-01
+
+# import components from v0
+npx shadcn add "https://v0.dev/chat/xxx"
+
+# Look for https://v0.dev/chat/xxx/json to know how it works
+# https://github.com/jherr/shadcn-differ-demo/blob/main/simple.json
+npx shadcn@latest init http://localhost:8080/simple.json
+
+# Add simple-ai components (chat interface components)
+# https://github.com/Alwurts/simple-ai
+npx shadcn@latest add https://simple-ai.alwurts.com/registry/chat-message.json
+</code></pre>
 <p>To understand shadcn/ui, first we need to know what does <code>cva (class-variance-authority)</code> do. It basically is a function, that allows us to define variants for the element we want to style. A simple variant definition has a name and a list of possible values, each with a list of classes that should apply.</p>
 <pre><code class="lang-jsx">// Using `cva` to handle our variant's classes
 import { cva } from "class-variance-authority";
