--- a/kexizeroing.github.io/Understand npm concepts.html
+++ b/kexizeroing.github.io/Understand npm concepts.html
@@ -5,6 +5,7 @@
 <li>If you run <code>npm i</code> against the <code>package.json</code> and <code>package-lock.json</code>, the latter will never be updated, even if the <code>package.json</code> would be happy with newer versions.</li>
 <li>If you manually edit your <code>package.json</code> to have different ranges and run <code>npm i</code> and those ranges aren't compatible with your <code>package-lock.json</code>, then the latter will be updated with version that are compatible with your <code>package.json</code>.</li>
 <li>Listed dependencies in <code>package-lock.json</code> file have mixed (sha1/sha512) integrity checksum. npm changed the integrity checksum from sha1 to sha512. Only packages published with npm@5 or later will include a sha512 integrity hash.</li>
+<li>Ignoring the lock file and pinning the exact version of a dependency in <code>package.json</code> is not a good idea since their dependencies (and deps of their deps) are not explicitly pinned to a version. This can result in different versions of same dependencies being installed when running <code>npm install</code> at different times.</li>
 </ol>
 <blockquote><p>Two fields are mandatory in <code>package.json</code>:</p>
 <ul>
