--- a/kexizeroing.github.io/Using ES modules.html
+++ b/kexizeroing.github.io/Using ES modules.html
@@ -137,11 +137,13 @@ import { name as circleName } from "https://example.com/shapes/circle.js";
 // import from CDN, and no need for a build step
 // https://www.skypack.dev
 import React from "https://cdn.skypack.dev/react";
-
-// esm.sh is a modern CDN that allows you to import es6 modules from a URL
-// No build tools needed
-import Module from "https://esm.sh/PKG@SEMVER[/PATH]";
+// or 
+import React from "https://esm.sh/react@19/?dev"
+import ReactDOMClient from "https://esm.sh/react-dom@19/client?dev"
 </code></pre>
+<blockquote><p>UMD builds removed in React 19:</p>
+<p>UMD was widely used in the past as a convenient way to load React without a build step. Now, there are modern alternatives for loading modules as scripts in HTML documents. Starting with React 19, React will no longer produce UMD builds to reduce the complexity of its testing and release process. To load React 19 with a script tag, we recommend using an ESM-based CDN such as <code>esm.sh</code>.</p>
+</blockquote>
 <p><a href="https://github.com/WICG/import-maps">This proposal</a> allows control over what URLs get fetched by JavaScript <code>import</code> statements. This allows "bare import specifiers", such as <code>import moment from "moment"</code>, to work. The mechanism for doing this is via an <em>import map</em> which can be used to control the resolution of module specifiers generally.</p>
 <p>Today, <code>import moment from "moment"</code> throws, as such bare specifiers are reserved <em>(specifier needs to start with the character <code>/</code>, <code>./</code>, <code>../</code>)</em>. By supplying the browser with the following import map, the above would act as if you had written <code>import moment from "/node_modules/moment/src/moment.js"</code>.</p>
 <pre><code class="lang-html">&lt;script type="importmap"&gt;
