--- a/f2h2h1.github.io/使用docker-compose部署magento2.html
+++ b/f2h2h1.github.io/使用docker-compose部署magento2.html
@@ -358,7 +358,7 @@ http {
     default_type  application/octet-stream;
 
     log_format  main  '\$remote_addr - \$remote_user [\$time_local] "\$request" '
-                    '\$status $body_bytes_sent "\$http_referer" '
+                    '\$status \$body_bytes_sent "\$http_referer" '
                     '"\$http_user_agent" "\$http_x_forwarded_for"';
 
     access_log  /var/log/nginx/access.log  main;
@@ -690,7 +690,7 @@ http {
     default_type  application/octet-stream;
 
     log_format  main  '\$remote_addr - \$remote_user [\$time_local] "\$request" '
-                    '\$status $body_bytes_sent "\$http_referer" '
+                    '\$status \$body_bytes_sent "\$http_referer" '
                     '"\$http_user_agent" "\$http_x_forwarded_for"';
 
     access_log  /var/log/nginx/access.log  main;
@@ -971,3 +971,16 @@ docker exec php /var/www/html/init.sh
 # rm magento2.tar.gz &amp;&amp; rm -r magento242 &amp;&amp; rm -r mysql-data
 # docker rm `docker ps -a | grep Exited | awk '{print $1}'`
 </code></pre>
+&lt;!--
+
+pecl install xdebug-3.4.1 &amp;&amp; \
+docker-php-ext-enable xdebug &amp;&amp; \
+echo "xdebug.mode=debug" &gt;&gt; /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini &amp;&amp; \
+echo "xdebug.idekey=vscode" &gt;&gt; /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini &amp;&amp; \
+echo "xdebug.client_host=127.0.0.1" &gt;&gt; /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini &amp;&amp; \
+echo "xdebug.client_port=9003" &gt;&gt; /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini &amp;&amp; \
+echo "xdebug.connect_timeout_ms=2000" &gt;&gt; /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini &amp;&amp; \
+echo "xdebug.start_with_request=trigger" &gt;&gt; /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+
+
+--&gt;
