--- a/f2h2h1.github.io/开发Magento2的模块.html
+++ b/f2h2h1.github.io/开发Magento2的模块.html
@@ -2304,10 +2304,65 @@ areaCode
 areaCode 的值在这个位置
 vendor\magento\framework\App\Area.php
 
+$areaList = $objectManager-&gt;get(\Magento\Framework\App\AreaList::class);
+foreach (array_unique(array_push($areaList-&gt;getCodes(), \Magento\Framework\App\Area::AREA_GLOBAL))
+     as $areaCode) {
+    echo $areaCode;echo PHP_EOL;
+}
+
 文档里没有提到 doc
 soap 的存在感比较低，似乎很少会用到
 
 https://developer.adobe.com/commerce/php/architecture/modules/areas/
+
+
+php -a &lt;&lt;-'EOF'
+
+try {
+// 引入 magento2 的引导文件
+require __DIR__ . '/app/bootstrap.php';
+// 创建一个应用对象
+$application = new \Magento\Framework\Console\Cli('Magento CLI');
+// 获取一个对象管理器
+$objectManager = \Magento\Framework\App\ObjectManager::getInstance();
+// 这两句主要用在 git for windows 的环境下，主要用在 php -a
+putenv('COLUMNS=80');
+putenv('LINES=50');
+// 允许执行多个命令，不然会只执行一个命令然后直接 exit
+$application-&gt;setAutoExit(false);
+
+
+$areaList = $objectManager-&gt;get(\Magento\Framework\App\AreaList::class);
+$areaListCodes = $areaList-&gt;getCodes();
+array_push($areaListCodes, \Magento\Framework\App\Area::AREA_GLOBAL);
+foreach (array_unique($areaListCodes)
+     as $areaCode) {
+    echo $areaCode;echo PHP_EOL;
+    if ($areaCode !== \Magento\Framework\App\Area::AREA_GLOBAL) {
+        $areaOmConfiguration = $objectManager
+            -&gt;get(\Magento\Framework\App\ObjectManager\ConfigLoader::class)
+            -&gt;load($areaCode);
+
+        $objectManager-&gt;configure($areaOmConfiguration);
+
+        $objectManager-&gt;get(\Magento\Framework\Config\ScopeInterface::class)
+            -&gt;setCurrentScope($areaCode);
+    }
+
+    $command = 'magento dev:di:info Magento\Framework\GraphQl\Query\ResolverInterface';
+    $application-&gt;run(new \Symfony\Component\Console\Input\ArgvInput(explode(' ', $command)));
+}
+
+} catch (\Throwable $e) {
+    echo join(PHP_EOL, [
+        $e-&gt;getFile() . ':' . $e-&gt;getLine(),
+        $e-&gt;getMessage(),
+        $e-&gt;getTraceAsString(),
+    ]);
+}
+
+EOF
+
 
 
 后台的渲染逻辑会不会和前台不一样？
@@ -3044,6 +3099,13 @@ $productCollection-&gt;addFieldToFilter(
 );
 $productCollection-&gt;setPageSize(1);
 $product = $productCollection-&gt;getFirstItem();
+
+
+/** @var \Magento\Catalog\Api\ProductRepositoryInterface */
+$productRepository = \Magento\Framework\App\ObjectManager::getInstance()-&gt;get(\Magento\Catalog\Api\ProductRepositoryInterface::class);
+$product = $productRepository-&gt;getById($productId);
+$product = $productRepository-&gt;get($sku);
+$product-&gt;getExtensionAttributes();
 </code></pre>
 &lt;!--
 常用的对象
@@ -3561,6 +3623,7 @@ select * from sales_order_status_state;
 <li>amasty <a href="https://amasty.com/">https://amasty.com/</a></li>
 <li>vnecoms <a href="https://www.vnecoms.com/">https://www.vnecoms.com/</a></li>
 <li>webkul <a href="https://webkul.com/">https://webkul.com/</a></li>
+<li>MGT-Commerce <a href="https://www.mgt-commerce.com/">https://www.mgt-commerce.com/</a></li>
 </ul>
 &lt;!--
 https://devdocs.magento.com/guides/v2.4/config-guide/cli/config-cli-subcommands-cron.html
