--- a/index.html
+++ b/index.html
@@ -6,12 +6,72 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8768 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8795 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E6%91%B8%E7%B4%A2%EF%BC%88%E5%8D%81%E4%BA%8C%EF%BC%89%EF%BC%9A%E6%B3%9B%E5%9E%8B%E4%B9%8Bwhere%E3%80%81%E5%8F%8D%E9%9D%A2%E4%BB%A3%E7%A0%81%E5%88%9D%E6%8E%A2.html>2025-01-23 Rust 在线摸索（十二）：泛型之where、反面代码初探</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202503%20%E6%B8%85%E5%8D%8E%E5%86%AC%E5%AD%A3%E5%8B%87%E5%A3%AB%E8%B5%9B%E7%AC%AC%E4%B8%89%E5%91%A8.html>2025-01-22 折返点 2503 清华冬季勇士赛第三周</a></li>
+
+<li><a href=conge.livingwithfcs.org/2024%20%E5%B9%B4%E8%AF%BB%E4%B9%A6%E6%80%BB%E7%BB%93%20.html>2025-01-22 2024 年读书总结 </a></li>
+
+<li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E6%91%B8%E7%B4%A2%EF%BC%88%E5%8D%81%E4%B8%80%EF%BC%89%EF%BC%9A%E6%B3%9B%E5%9E%8B%E4%B9%8Btrait%E3%80%81bounds.html>2025-01-22 Rust 在线摸索（十一）：泛型之trait、bounds</a></li>
+
+<li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E6%91%B8%E7%B4%A2%EF%BC%88%E5%8D%81%EF%BC%89%EF%BC%9A%E6%B3%9B%E5%9E%8B%E4%B9%8B%E5%AE%9E%E7%8E%B0.html>2025-01-21 Rust 在线摸索（十）：泛型之实现</a></li>
+
+<li><a href=shiina18.github.io/LightRAG%20%E6%BA%90%E7%A0%81%E7%AE%80%E8%A6%81%E5%88%86%E4%BA%AB.html>2025-01-21 LightRAG 源码简要分享</a></li>
+
+<li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E6%91%B8%E7%B4%A2%EF%BC%88%E4%B9%9D%EF%BC%89%EF%BC%9A%E6%B3%9B%E5%9E%8B%E4%B9%8B%E5%87%BD%E6%95%B0.html>2025-01-20 Rust 在线摸索（九）：泛型之函数</a></li>
+
+<li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E6%91%B8%E7%B4%A2%EF%BC%88%E5%85%AB%EF%BC%89%EF%BC%9A%E6%B3%9B%E5%9E%8B%E6%B2%A1%E5%85%A5%E9%97%A8.html>2025-01-19 Rust 在线摸索（八）：泛型没入门</a></li>
+
+<li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E6%91%B8%E7%B4%A2%EF%BC%88%E4%B8%83%EF%BC%89%EF%BC%9Astruct.html>2025-01-18 Rust 在线摸索（七）：struct</a></li>
+
+<li><a href=informal.top/Weekly-%2320%20AutoSwitch%20Translate.html>2025-01-18 Weekly-#20 AutoSwitch Translate</a></li>
+
+<li><a href=jasonkayzk.github.io/%E3%80%90%E9%A1%B6%E3%80%91%E3%81%95%E3%82%88%E3%81%AA%E3%82%89%EF%BC%92%EF%BC%90%EF%BC%92%EF%BC%94%E3%80%81%E3%81%93%E3%82%93%E3%81%AB%E3%81%A1%E3%81%AF%EF%BC%92%EF%BC%90%EF%BC%92%EF%BC%95%EF%BC%81.html>2025-01-17 【顶】さよなら２０２４、こんにちは２０２５！</a></li>
+
+<li><a href=babyno.top/%E7%90%83%E4%BC%9A04%E6%B8%B8%E6%88%8F%E9%80%86%E5%90%91-%E5%AD%98%E6%A1%A3%E5%8A%A0%E5%AF%86%E7%AE%97%E6%B3%95.html>2025-01-17 球会04游戏逆向-存档加密算法</a></li>
+
+<li><a href=codeinchinese.com/%E3%80%8A%E7%A7%91%E5%AD%A6%EF%BC%9F%E2%80%94%E2%80%94%E4%B8%9C%E9%87%8E%E5%9C%AD%E5%90%BE%E3%80%8B%E6%91%98%E5%BD%95%EF%BC%88%E4%B8%8B%EF%BC%89.html>2025-01-17 《科学？——东野圭吾》摘录（下）</a></li>
+
+<li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E6%91%B8%E7%B4%A2%EF%BC%88%E5%85%AD%EF%BC%89%EF%BC%9Atrait%E4%B9%8Bdyn.html>2025-01-17 Rust 在线摸索（六）：trait之dyn</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202502%20%E6%96%B0%E5%B9%B4%E8%B7%91%E5%92%8C%E6%B8%85%E5%8D%8E%E5%86%AC%E5%AD%A3%E5%8B%87%E5%A3%AB%E8%B5%9B%E7%AC%AC%E4%BA%8C%E5%91%A8.html>2025-01-16 折返点 2502 新年跑和清华冬季勇士赛第二周</a></li>
+
+<li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E6%91%B8%E7%B4%A2%EF%BC%88%E4%BA%94%EF%BC%89%EF%BC%9Atrait%E4%B9%8B%E9%9B%B6.html>2025-01-16 Rust 在线摸索（五）：trait之零</a></li>
+
+<li><a href=informal.top/Goodbye%202024.html>2025-01-16 Goodbye 2024</a></li>
+
+<li><a href=codeinchinese.com/%E7%94%A8%E6%97%A5%E8%AF%AD%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%E3%80%8C%E6%8A%9A%E5%AD%90%E3%80%8D%E5%AE%8C%E6%88%90%E7%8C%9C%E6%95%B0%E5%AD%97.html>2025-01-15 用日语编程语言「抚子」完成猜数字</a></li>
+
+<li><a href=babyno.top/%E7%90%83%E4%BC%9A04%E6%B8%B8%E6%88%8F%E9%80%86%E5%90%91-%E5%AD%98%E6%A1%A3%E6%96%87%E4%BB%B6%E8%A7%A3%E6%9E%90.html>2025-01-14 球会04游戏逆向-存档文件解析</a></li>
+
+<li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E7%8E%AF%E5%A2%83%E6%91%B8%E7%B4%A2%EF%BC%88%E5%9B%9B%EF%BC%89%EF%BC%9Acfg%E3%80%81not.html>2025-01-14 Rust 在线环境摸索（四）：cfg、not</a></li>
+
+<li><a href=codeinchinese.com/%E7%94%A8%E6%97%A5%E8%AF%AD%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%E3%80%8C%E6%8A%9A%E5%AD%90%E3%80%8D%E7%BC%96%E5%86%99%E7%8C%9C%E6%95%B0%E5%AD%97.html>2025-01-13 用日语编程语言「抚子」编写猜数字</a></li>
+
+<li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E7%8E%AF%E5%A2%83%E5%85%A5%E9%97%A8%EF%BC%88%E4%B8%89%EF%BC%89%EF%BC%9A%E9%94%99%E8%AF%AF%E5%A4%84%E7%90%86%E4%B9%8B%20abort%E3%80%81unwind.html>2025-01-12 Rust 在线环境入门（三）：错误处理之 abort、unwind</a></li>
+
+<li><a href=informal.top/Weekly-%2320%20Breaking%20of%20glass.html>2025-01-12 Weekly-#20 Breaking of glass</a></li>
+
+<li><a href=codeinchinese.com/%E3%80%8A%E7%A7%91%E5%AD%A6%EF%BC%9F%E2%80%94%E2%80%94%E4%B8%9C%E9%87%8E%E5%9C%AD%E5%90%BE%E3%80%8B%E6%91%98%E5%BD%95%EF%BC%88%E4%B8%8A%EF%BC%89.html>2025-01-11 《科学？——东野圭吾》摘录（上）</a></li>
+
+<li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E7%8E%AF%E5%A2%83%E5%85%A5%E9%97%A8%EF%BC%88%E4%BA%8C%EF%BC%89%EF%BC%9A%E9%94%99%E8%AF%AF%E5%A4%84%E7%90%86%E4%B9%8B%20panic%21.html>2025-01-11 Rust 在线环境入门（二）：错误处理之 panic!</a></li>
+
+<li><a href=conge.livingwithfcs.org/2024%20%E5%B9%B4%E8%B7%91%E6%AD%A5%E6%80%BB%E7%BB%93%20%E9%A6%96%E9%A9%AC%E7%A0%B4%E4%B8%89%20%E9%87%8C%E7%A8%8B%203460%20%E5%85%AC%E9%87%8C.html>2025-01-10 2024 年跑步总结 首马破三 里程 3460 公里</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202501%20%E7%AE%AD%E6%9C%AF%E4%B8%8E%E5%BE%92%E6%AD%A5.html>2025-01-09 父范学堂 2501 箭术与徒步</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202501%20%E6%96%B0%E5%B9%B4%E8%B7%91%E5%92%8C%E6%B8%85%E5%8D%8E%E5%86%AC%E5%AD%A3%E5%8B%87%E5%A3%AB%E8%B5%9B.html>2025-01-09 折返点 2501 新年跑和清华冬季勇士赛</a></li>
+
+<li><a href=jalenz.cn/my-2024.html>2025-01-08 my-2024</a></li>
+
+<li><a href=codeinchinese.com/Rust%20%E5%9C%A8%E7%BA%BF%E7%8E%AF%E5%A2%83%E5%85%A5%E9%97%A8%EF%BC%88%E4%B8%80%EF%BC%89.html>2025-01-08 Rust 在线环境入门（一）</a></li>
 
 <li><a href=gitee.com/MulanRevive/bounty/Python%203.13%20%E9%83%A8%E5%88%86%E5%89%8D%E7%AB%AF%E6%96%B0%E5%8A%9F%E8%83%BD%E4%B8%8E%E6%9C%A8%E5%85%B0%E5%AF%B9%E7%85%A7.html>2025-01-06 Python 3.13 部分前端新功能与木兰对照</a></li>
 
@@ -2303,8 +2363,6 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202301%20%EF%BD%9C%20%E8%B7%91%E6%AD%A5%E4%B8%8E%E7%9A%AE%E8%82%A4.html>2023-01-08 折返点 2301 ｜ 跑步与皮肤</a></li>
 
-<li><a href=jalenz.cn/Winter%20Task%20OpenCV.html>2023-01-06 Winter Task OpenCV</a></li>
-
 <li><a href=tifa-233.com/%E6%AF%94%E8%B5%9B%E8%AE%B0%E5%BD%95%20-%20Codeforces%20Round%20%23842%20%28Div.%202%29.html>2023-01-06 比赛记录 - Codeforces Round #842 (Div. 2)</a></li>
 
 <li><a href=jalenz.cn/Ubuntu%2020.04%20%E9%85%8D%E7%BD%AE.html>2023-01-06 Ubuntu 20.04 配置</a></li>
@@ -3020,8 +3078,6 @@
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20%7C%20263%20%E6%BF%80%E5%8A%B1.html>2022-07-26 新爸五年计划 | 263 激励</a></li>
 
 <li><a href=www.barretlee.com/%E4%B8%8D%E6%B4%BB%E6%88%90%E4%BB%96%E4%BA%BA%E7%9C%BC%E4%B8%AD%E7%9A%84%E8%87%AA%E5%B7%B1.html>2022-07-26 不活成他人眼中的自己</a></li>
-
-<li><a href=jalenz.cn/New%20Journey.html>2022-07-26 New Journey</a></li>
 
 <li><a href=blog.forecho.com/%E6%88%91%E7%9A%84%E7%AC%AC%E4%B8%80%E8%BE%86%E7%94%B5%E5%8A%A8%E8%87%AA%E8%A1%8C%E8%BD%A6.html>2022-07-25 我的第一辆电动自行车</a></li>
 
@@ -17393,19 +17449,13 @@
 
 <li><a href=tifa-233.com/%E6%B5%8B%E8%AF%95%E6%96%87%E7%AB%A0%20-%20%E6%9D%82%E9%A1%B9.html>1000-01-01 测试文章 - 杂项</a></li>
 
-<li><a href=kexizeroing.github.io/State%20management%20clone.html>Sep 8 2020 State management clone</a></li>
-
 <li><a href=kexizeroing.github.io/Bitwise%20operations%20and%20related%20concepts.html>Sep 5 2020 Bitwise operations and related concepts</a></li>
 
 <li><a href=kexizeroing.github.io/URL-driven%20state%20in%20React.html>Sep 28 202 URL-driven state in React</a></li>
 
-<li><a href=kexizeroing.github.io/Implement%20a%20Trie.html>Sep 19 202 Implement a Trie</a></li>
-
 <li><a href=kexizeroing.github.io/Create%20a%20video%20player.html>Sep 18 202 Create a video player</a></li>
 
 <li><a href=kexizeroing.github.io/React%20hooks%20clone%20and%20related%20concepts.html>Sep 12 202 React hooks clone and related concepts</a></li>
-
-<li><a href=kexizeroing.github.io/Module%20bundler%20and%20code%20transformation.html>Oct 9 2021 Module bundler and code transformation</a></li>
 
 <li><a href=kexizeroing.github.io/React%2018%20Suspense%20and%20startTransition.html>Oct 7 2023 React 18 Suspense and startTransition</a></li>
 
@@ -17487,7 +17537,11 @@
 
 <li><a href=kexizeroing.github.io/Rice%20clear%20turn-in.html>Jan 28 201 Rice clear turn-in</a></li>
 
+<li><a href=kexizeroing.github.io/Micro-frontends%20with%20Module%20Federation.html>Jan 27 202 Micro-frontends with Module Federation</a></li>
+
 <li><a href=kexizeroing.github.io/Intro%20to%20Bun.html>Jan 22 202 Intro to Bun</a></li>
+
+<li><a href=kexizeroing.github.io/Tech%20Share%20Rewind%202024.html>Jan 14 202 Tech Share Rewind 2024</a></li>
 
 <li><a href=kexizeroing.github.io/Container%20queries%20and%20%3Ahas%20selector.html>Jan 08 202 Container queries and :has selector</a></li>
 
