--- a/www.zhaohuabing.com/index.html
+++ b/www.zhaohuabing.com/index.html
@@ -1,4 +1,233 @@
-<h2><a href="https://github.com/zhaohuabing/hugo_blog/blob/master/content/notes/index.md">仓库源文</a>，<a href="https://www.zhaohuabing.com/post/index">站点原文</a></h2>
-<h2><a href="https://zhaohuabing.com/learning-golang">Go 语言学习笔记</a></h2>
-<h2><a href="https://zhaohuabing.com/learning-envoy">Envoy 学习笔记</a></h2>
-<h2><a href="https://zhaohuabing.com/learning-linux">Linux 学习笔记</a></h2>
+<h2><a href="https://github.com/zhaohuabing/hugo_blog/blob/master/content/about/index.md">仓库源文</a>，<a href="https://www.zhaohuabing.com/post/index">站点原文</a></h2>
+<h2>About Me</h2>
+<p>Hello! I’m Huabing Zhao, an engineer at <a href="https://tetrate.io">Tetrate</a>, with extensive experience across leading technology companies such as Tencent Cloud, ZTE Corporation, and Oracle. My current expertise centers around Envoy, Envoy Gateway, and Istio. I am also the creator of Aeraki Mesh, an open-source CNCF project that extends Istio’s capabilities to manage traffic for protocols such as Dubbo, Thrift, Redis, and other proprietary protocols.</p>
+<p>Feel free to connect with me via:</p>
+<ul>
+<li>Email zhaohuabing@gmail.com</li>
+<li>WeChat zhao_huabing</li>
+<li>LinkedIn <a href="https://www.linkedin.com/in/zhaohuabing">https://www.linkedin.com/in/zhaohuabing</a></li>
+</ul>
+<h2>Publications</h2>
+<table>
+<thead><tr>
+<th>Title</th>
+<th>Type</th>
+<th>Publisher</th>
+<th>Link</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="https://www.zhaohuabing.com/post/2021-08-26-istio-handbook/">Istio Service Mesh Advanced Practical</a></td>
+<td>Book</td>
+<td>Publishing House of Electronics Industry</td>
+<td><a href="https://item.jd.com/13200745.html">Buy now</a></td>
+</tr>
+<tr>
+<td><a href="https://www.zhaohuabing.com/post/2021-09-08-distributed-tracing-with-jaeger-kubernetes-and-istio/">Distributed Tracing with Jaeger, Kubernetes, and Istio</a></td>
+<td>Live Project</td>
+<td>Manning</td>
+<td><a href="https://www.manning.com/liveprojectseries/distributed-tracing-ser">30% off</a></td>
+</tr>
+<tr>
+<td><a href="https://zhaohuabing.com/post/2021-08-27-cloud-native-data-center">Cloud Native Data Center Networking</a></td>
+<td>Translation</td>
+<td>China Electric Power Press</td>
+<td><a href="https://item.jd.com/12929975.html">Buy now</a></td>
+</tr>
+<tr>
+<td><a href="http://localhost:1313/post/2021-10-08-istio-operation-bible/">Istio Operation Bible</a></td>
+<td>ebook</td>
+<td></td>
+<td><a href="https://istio-operation-bible.aeraki.net/">Read online</a></td>
+</tr>
+</tbody>
+</table>
+<h2>Presentations (Selected)</h2>
+<table>
+<thead><tr>
+<th>Year</th>
+<th>City</th>
+<th>Conference</th>
+<th>Title</th>
+<th>Slides</th>
+<th>Video</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>2024</td>
+<td>Hong Kong</td>
+<td><a href="https://kccncossaidevchn2024.sched.com/event/1eYcX/gateway-api-and-beyond-introducing-envoy-gateways-gateway-api-extensions-jie-api-daeptao-envoyjie-zha-jie-api-huabing-zhao-tetrate">KubeCon China</a></td>
+<td><a href="https://www.zhaohuabing.com/post/2024-08-31-introducing-envoy-gateways-gateway-api-extensions/">Gateway API and Beyond: Introducing Envoy Gateway's Gateway API Extensions</a></td>
+<td><a href="https://static.sched.com/hosted_files/kccncossaidevchn2024/2b/Gateway%20API%20and%20Beyond_%20Introducing%20Envoy%20Gateway%27s%20Gateway%20API%20Extensions.pptx.pdf?_gl=1*17q8fyt*_gcl_au*MTE3NzMxNDg4My4xNzI1NTkwMDI1*FPAU*MTE3NzMxNDg4My4xNzI1NTkwMDI1">Slides</a></td>
+<td><a href="https://www.youtube.com/watch?v=qH2byF7SDO8">Video</a></td>
+</tr>
+<tr>
+<td>2023</td>
+<td>Chicago</td>
+<td><a href="https://colocatedeventsna2023.sched.com/event/1Rj2s/introduce-metaprotocol-proxy-a-layer-7-proxy-framework-powered-by-envoy-huabing-zhao-tetrate">KubeCon NA</a></td>
+<td><a href="https://www.zhaohuabing.com/post/2023-11-16-kubecon-na-metaprotocol/"> Introduce MetaProtocol Proxy: A Layer-7 Proxy Framework Powered by Envoy</a></td>
+<td><a href="https://zhaohuabing.com/slides/MetaProtoclProxy.pdf">Slides</a></td>
+<td><a href="https://www.bilibili.com/video/BV1JC4y1m71j">Video</a></td>
+</tr>
+<tr>
+<td>2023</td>
+<td>Shanghai</td>
+<td><a href="https://www.lfasiallc.com/kubecon-cloudnativecon-open-source-summit-china/program/schedule/">KubeCon China</a></td>
+<td><a href="https://www.zhaohuabing.com/post/2023-11-01-kubecon-shanghai-2023-envoy-gateway-the-api-gateway-in-the-cloud-native-era/">Envoy Gateway: The API Gateway for the Cloud-Native Era</a></td>
+<td><a href="https://zhaohuabing.com/slides/kubecon-envoy-gateway-the-API-Gateway-in-the-Cloud-Native-Era.pdf">Slides</a></td>
+<td><a href="https://www.bilibili.com/video/BV15G411y7hP">Video</a></td>
+</tr>
+<tr>
+<td>2022</td>
+<td>Shanghai</td>
+<td><a href="https://jimmysong.io/notice/service-mesh-summit-2022/">China Service Mesh Summit</a></td>
+<td><a href="https://www.zhaohuabing.com/post/2022-09-26-servicemesh-summit2022-dubbo-aeraki-mesh/">Manage Dubbo Application In Istio Service Mesh In 5 Minutes</a></td>
+<td><a href="https://zhaohuabing.com/web-slides/manage-dubbo-in-istio-in-5-minutes/">Slides</a></td>
+<td><a href="https://www.bilibili.com/video/BV1oe4y167kz/?zw&amp;vd_source=13de6a5e7f290572ee6b115b44a424f2">Video</a></td>
+</tr>
+<tr>
+<td>2022</td>
+<td>Virtual</td>
+<td><a href="https://events.istio.io/istiocon-2022">IstioCon</a></td>
+<td><a href="https://events.istio.io/istiocon-2022/sessions/tencent-music-aeraki/">Tencent Music’s service mesh practice with Istio and Aeraki</a></td>
+<td><a href="/slides/tencent-music-service-mesh-practice-with-istio-and-aeraki.pdf">Slides</a></td>
+<td><a href="https://www.youtube.com/watch?v=6t_yPsq4Pi4">Video</a></td>
+</tr>
+<tr>
+<td>2022</td>
+<td>Virtual</td>
+<td><a href="https://a2m.msup.com.cn/course?aid=2699&amp;cid=15382">A2M</a></td>
+<td><a href="https://a2m.msup.com.cn/course?aid=2699&amp;cid=15382">Full-Stack Service Mesh – Aeraki Mesh Empowers You to Manage Any Layer 7 Traffic in a Service Mesh</a></td>
+<td><a href="/slides/full-stack-service-mesh-a2m-20220422.pdf">Slides</a></td>
+<td></td>
+</tr>
+<tr>
+<td>2022</td>
+<td>Virtual</td>
+<td><a href="https://cloud.tencent.com/developer/salon/live-1403">Tencent Cloud</a></td>
+<td><a href="https://mp.weixin.qq.com/s/zp9q99mGyH2VD9Dij2owWg">Aeraki Mesh: Service Mesh Practices in Video Streaming Applications for the 2022 Winter Olympics</a></td>
+<td><a href="http://localhost:1313/img/2022-03-30-aeraki-mesh-winter-olympics-practice/slides.pdf">Slides</a></td>
+<td><a href="https://youtu.be/uXxatQTKzW8">Video</a></td>
+</tr>
+<tr>
+<td>2021</td>
+<td>Virtual</td>
+<td><a href="https://events.istio.io/istiocon-2021/">IstioCon</a></td>
+<td><a href="https://events.istio.io/istiocon-2021/sessions/how-to-manage-any-layer-7-traffic-in-an-istio-service-mesh/">How to manage any layer-7 traffic in an Istio service mesh?</a></td>
+<td><a href="/slides/how-to-manage-any-layer-7-traffic-in-istio.pdf">Slides</a></td>
+<td><a href="https://www.youtube.com/watch?v=sBS4utF68d8">Video</a></td>
+</tr>
+<tr>
+<td>2020</td>
+<td>Virtual</td>
+<td><a href="https://www.cnbpa.org/">CNBPS</a></td>
+<td><a href="https://cloud.tencent.com/developer/article/1723804">Understanding Istio Traffic Management and Protocol Extensions</a></td>
+<td><a href="/slides/cnbps2020-istio-aeraki.pdf">Slides</a></td>
+<td><a href="https://www.youtube.com/watch?v=lB5d4qbZqzU">Video</a></td>
+</tr>
+<tr>
+<td>2019</td>
+<td>Chengdu</td>
+<td><a href="https://cloudnative.to/blog/service-mesh-meetup-chengdu-20191028/">Service Mesher Meetup</a></td>
+<td><a href="https://cloudnative.to/blog/service-mesh-meetup-chengdu-20191028/">What Can Service Mesh Learn From SDN?</a></td>
+<td><a href="/slides/what-can-service-mesh-learn-from-sdn-servicemesher-meetup-20191026.pdf">Slides</a></td>
+<td><a href="https://youtu.be/nGkxp-2OsKg">Video</a></td>
+</tr>
+<tr>
+<td>2019</td>
+<td>Xi'an</td>
+<td>ONAP Workshop</td>
+<td>Service Mesh Practice with 5G Management System</td>
+<td><a href="/slides/service-mesh-practice-with-5g-management-system-lfn.pdf">Slides</a></td>
+</tr>
+<tr>
+<td>2018</td>
+<td>Nanjing</td>
+<td><a href="https://www.bagevent.com/event/1624048?aId=">GNTC</a></td>
+<td><a href="https://www.sdnlab.com/22596.html">Service Mesh in Action with ONAP</a></td>
+</tr>
+<tr>
+<td>2017</td>
+<td>Santa Clara</td>
+<td><a href="https://wiki.onap.org/display/DW/ONAP+Beijing+Release+Developer+Forum%2C+Dec.+11-13%2C+2017%2C+Santa+Clara%2C+CA+US">NAP Developer Forum</a></td>
+<td><a href="https://onapbeijing2017.sched.com/event/D5q2">MSB to Support Carrier Grade ONAP Microservice Architecture with Service Mesh</a></td>
+<td><a href="https://wiki.onap.org/display/DW/MSB+Service+Mesh+Planning?preview=%2F20873876%2F20873874%2FMSB+to+Support+Carrier+Grade+ONAP+Microservice+Architecture+with+Service+Mesh.pdf">Slides</a></td>
+</tr>
+<tr>
+<td>2017</td>
+<td>Santa Clara</td>
+<td><a href="https://wiki.onap.org/display/DW/ONAP@ONS2017">ONS</a></td>
+<td>Microservice Powered Orchestration</td>
+<td><a href="https://wiki.onap.org/display/DW/ONAP@ONS2017?preview=%2F3245268%2F3245309%2FMicroservice+Powered+Orchestration+Architecture.pdf">Slides</a></td>
+</tr>
+<tr>
+<td>2017</td>
+<td>New Jersey</td>
+<td><a href="https://wiki.onap.org/display/DW/ONAP+Project+Developer+Event%3A+May+2+-+5%2C+2017%2C+Middletown%2C+NJ%2C+USA">ONAP Developer Event</a></td>
+<td>MSB Technical Deep Dive and ONAP Use Cases</td>
+<td><a href="https://www.slideshare.net/HuabingZhao/msb-depp-dive/">Slides</a></td>
+</tr>
+<tr>
+<td>2017</td>
+<td>Paris</td>
+<td><a href="https://wiki.onap.org/display/DW/ONAP+Developer+Event+September+25-28%2C+2017%2C+Paris-Saclay%2C+France">ONAP Developer Event</a></td>
+<td><a href="https://wiki.onap.org/display/DW/September+26-28+Topics#September2628Topics-M2">Microservice Bus Tutorial</a></td>
+<td><a href="https://www.slideshare.net/HuabingZhao/microservice-bus-tutorial">Slides</a></td>
+</tr>
+</tbody>
+</table>
+<h2>Open Source Projects</h2>
+<table>
+<thead><tr>
+<th>Project</th>
+<th>Role</th>
+<th>Website</th>
+<th>GitHub</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Aeraki Mesh</td>
+<td>Creator</td>
+<td><a href="https://aeraki.net">https://aeraki.net</a></td>
+<td><a href="http://github.com/aeraki-mesh">http://github.com/aeraki-mesh</a></td>
+</tr>
+<tr>
+<td>Envoy Gateway</td>
+<td>Maintainer</td>
+<td><a href="https://gateway.envoyproxy.io">https://gateway.envoyproxy.io</a></td>
+<td><a href="https://github.com/envoyproxy/gateway">https://github.com/envoyproxy/gateway</a></td>
+</tr>
+<tr>
+<td>Envoy</td>
+<td>Contributor</td>
+<td><a href="https://www.envoyproxy.io">https://www.envoyproxy.io</a></td>
+<td><a href="https://github.com/envoyproxy/envoy">https://github.com/envoyproxy/envoy</a></td>
+</tr>
+<tr>
+<td>Istio</td>
+<td>Contributor</td>
+<td><a href="https://istio.io">https://istio.io</a></td>
+<td><a href="https://github.com/istio/istio">https://github.com/istio/istio</a></td>
+</tr>
+<tr>
+<td>ONAP</td>
+<td>PTL</td>
+<td><a href="https://www.onap.org">https://www.onap.org</a></td>
+<td></td>
+</tr>
+<tr>
+<td>hugo-theme-cleanwhite</td>
+<td>Creator</td>
+<td><a href="https://themes.gohugo.io/themes/hugo-theme-cleanwhite">https://themes.gohugo.io/themes/hugo-theme-cleanwhite</a></td>
+<td><a href="https://github.com/zhaohuabing/hugo-theme-cleanwhite">https://github.com/zhaohuabing/hugo-theme-cleanwhite</a></td>
+</tr>
+</tbody>
+</table>
+<h2>Certificates</h2>
+<p>&lt;div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="6cb590b5-d2f6-42a1-9e2e-a8141624b718" data-share-badge-host="https://www.credly.com"&gt;&lt;/div&gt;&lt;script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"&gt;&lt;/script&gt;</p>
+<p>&lt;div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="08f232fa-30de-46bf-becb-a7e4ab85ef79" data-share-badge-host="https://www.credly.com"&gt;&lt;/div&gt;&lt;script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"&gt;&lt;/script&gt;</p>
+<p>&lt;div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="edf1a5de-202c-49e7-9762-f3e6f5ff1b38" data-share-badge-host="https://www.credly.com"&gt;&lt;/div&gt;&lt;script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"&gt;&lt;/script&gt;</p>
+<p>&lt;div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="86fbba51-17d8-4718-b6d8-3b8bff7c7377" data-share-badge-host="https://www.credly.com"&gt;&lt;/div&gt;&lt;script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"&gt;&lt;/script&gt;</p>
